Workbench ignore "Channel packed" and "None" Alpha option on texture #114377

Closed
opened 2023-11-01 20:43:12 +01:00 by sanek122005 · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-17 23:11, hash: 01612bacfd30

Short description of error
the "channel packed" and "none" options for the alpha channel of the image should make the workbench ignore it, but this does not happen.
Снимок экрана (64).png
Снимок экрана (65).png

At the same time, the "Premultiplied" option completely affects the texture
Снимок экрана (66).png

Exact steps for others to reproduce the error

  1. Open file
  2. change Alpha modes on texture
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-17 23:11, hash: `01612bacfd30` **Short description of error** the "channel packed" and "none" options for the alpha channel of the image should make the workbench ignore it, but this does not happen. ![Снимок экрана (64).png](/attachments/3ab643e2-4cbf-4a17-8a9e-a3f3bda703f9) ![Снимок экрана (65).png](/attachments/12948d47-152c-4b00-a69a-9f57c2749a4d) At the same time, the "Premultiplied" option completely affects the texture ![Снимок экрана (66).png](/attachments/81827392-5575-4e83-a6bb-c92cdb649136) **Exact steps for others to reproduce the error** 1. Open file 2. change Alpha modes on texture
sanek122005 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-01 20:43:12 +01:00

Thanks for the report, @sanek122005. I can confirm the issue.

Since the "Premultiplied" option appears to work, in fact, it seems expected that the "Channel packed" and "None" options for the alpha channel of an image should also work in the Workbench render engine.

So confirming...

Thanks for the report, @sanek122005. I can confirm the issue. Since the "Premultiplied" option appears to work, in fact, it seems expected that the "Channel packed" and "None" options for the alpha channel of an image should also work in the Workbench render engine. So confirming...
Member

I can confirm


Oops, did not refresh the page before commenting 😅

I can confirm - - - Oops, did not refresh the page before commenting 😅
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-07 15:51:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114377
No description provided.