Fix #114377: Workbench: Support None and Channel Packed alpha modes